# imc-prosperity-4-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
prosperity3opt/: __main__.py  grid.py  objective.py
prosperity4opt/: __main__.py  grid.py  objective.py
