[project]
name = "prosperity3opt"
description = "Hyperparameter optimizer for IMC Prosperity 3 algorithms"
version = "0.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Jasper van Merle", email = "jaspervmerle@gmail.com"}]
keywords = ["imc", "prosperity", "optimize", "optimizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = [
    "optuna>=4.2.1",
    "optuna-dashboard>=0.17.0",
    "gunicorn>=23.0.0",
    "numpy>=2.0.2",
    "typer>=0.15.2",
    "prosperity3bt>=0.11.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
prosperity3opt = "prosperity3opt.__main__:main"

[project.urls]
Repository = "https://github.com/jmerle/imc-prosperity-3-optimizer"
Issues = "https://github.com/jmerle/imc-prosperity-3-optimizer/issues"
Changelog = "https://github.com/jmerle/imc-prosperity-3-optimizer/releases"

[tool.setuptools.packages.find]
include = ["prosperity3opt", "prosperity3opt.*"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
